--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
+# Remove the echo commands and add proper patterns
+cat > .gitignore << 'EOF'
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules/*/*/*
-/backedend/node_modules/*/*/*
-/frontend/node_modules/*/*/*
+node_modules/
+/backend/node_modules/
+/frontend/node_modules/
 /.pnp
 .pnp.js
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 # testing
 .serverless/
@@ -26,21 +25,23 @@ build/
 .env.test.local
 .env.production.local
 
+# logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# dowe need to ignore pycache?
+# Python cache files
 __pycache__/
 *.py[cod]
+*.pyc
 *.pyo
 *.pyd   
-
-
 
 # IDE and Editor folders
 .vscode/
 .idea/
 
-
-
+# Sensitive files
+*.csv
+*.key
+*.pem
